# SeetaFace2

./: .gitignore  CMakeLists.txt  README.md
FaceDetector/seeta/: FaceDetectorPrivate.cpp
beautify/: CMakeLists.txt
beautify/include/beauty/: commontools.h  eye_enlarge.h  face_lift.h  image_brighten.h  rbf.h  skin_smooth.h
beautify/src/: commontools.cpp  eye_enlarge.cpp  face_lift.cpp  image_brighten.cpp  skin_smooth.cpp
example/points81/: 0_det_alignment.cpp  1_beauty.cpp  2_test_bilateralFilter.cpp  3_imageenhancetest.cpp  CMakeLists.txt
example/search/: CMakeLists.txt  example.cpp
ncnndetection/: CMakeLists.txt
ncnndetection/include/: face_track.h  ncnn_mtcnn.h  tld.h
ncnndetection/src/: face_track.cpp  ncnn_mtcnn.cpp  tld.cpp
